# KYEngine

./: .gitignore  .gitmodules  KYEngine.sln  README.md
KYEngine/: BaseTypes.h  CMakeLists.txt  Dx11.h  Graphic.cpp  Graphic.h  Input.cpp  Input.h  KYEngine.vcxproj  KYEngine.vcxproj.filters  System.cpp  System.h  Win32DefHeader.h  main.cpp  stdafx.h
KYEngine/CodeGraph/: CodeMap.dgml
KYEngine/Common/: BaseDef.h  CommonUtils.h  FileSystem.cpp  FileSystem.h  HashImpl.h  Singleton.h
KYEngine/Common/FileSystem/: FileSystem.cpp  FileSystem.h
KYEngine/Common/StringUtils/: StringUtils.cpp  StringUtils.h
KYEngine/DebugUtils/: TraceUtils.cpp  TraceUtils.h
KYEngine/Graphic/: Camera.cpp  Camera.h  CameraController.cpp  Frustum.cpp  Frustum.h  Graphic.cpp  Graphic.h  GraphicDataDef.h  GraphicDef.h  IRenderable.h  PipelineStage.cpp  PipelineStage.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderOperation.h  RenderTarget.cpp  RenderTarget.h  SpaceNode.cpp  SpaceNode.h  Viewport.h  WindowRenderTarget.h
KYEngine/Graphic/Camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h
KYEngine/Graphic/DX/: DX11NameTranslator.cpp  DX11NameTranslator.h  Dx11.cpp  Dx11.h  Dx11PipelineStage.cpp  Dx11PipelineStage.h  Dx11StateObject.cpp  Dx11StateObject.h  IndexBuffer.cpp  IndexBuffer.h  ResourceBuffer.cpp  ResourceBuffer.h  Texture.h  VertexBuffer.cpp  VertexBuffer.h
KYEngine/Graphic/DX/Buffer/: DX11Buffer.cpp  DX11Buffer.h  DX11IndexBuffer.cpp  DX11IndexBuffer.h  DX11VertexBuffer.cpp  DX11VertexBuffer.h  Dx11Shader.cpp  Dx11Shader.h
KYEngine/Graphic/HI/DX/: DX11NameTranslator.cpp  DX11NameTranslator.h  Dx11.cpp  Dx11.h  Dx11HardwareInterface.h  Dx11Resource.h
KYEngine/Graphic/HI/DX/Buffer/: DX11Buffer.cpp  DX11Buffer.h  DX11IndexBuffer.h  DX11VertexBuffer.cpp  DX11VertexBuffer.h
KYEngine/Graphic/HI/DX/Render/: Dx11RenderTargetView.cpp  Dx11RenderTargetView.h
KYEngine/Graphic/HI/DX/Shader/: Dx11Shader.cpp  Dx11Shader.h  Dx11ShaderResourceView.cpp  Dx11ShaderResourceView.h
KYEngine/Graphic/HI/DX/Stage/: Dx11PipelineStage.cpp  Dx11PipelineStage.h
KYEngine/Graphic/HI/DX/State/: Dx11StateObject.cpp  Dx11StateObject.h
KYEngine/Graphic/HI/DX/Texture/: Dx11Texture.cpp  Dx11Texture.h
KYEngine/Graphic/HI/Metal/: Metal.cpp  Metal.h
KYEngine/Graphic/Lighting/: LightManager.cpp  LightManager.h
KYEngine/Graphic/Material/: GlobalConstBuffer.cpp  GlobalConstBuffer.h  Material.cpp  Material.h
KYEngine/Graphic/Render/: BufferRenderProxy.h  IRenderable.h  RenderBatch.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderOperation.cpp  RenderOperation.h  RenderTarget.cpp  RenderTarget.h  RenderTargetView.cpp  RenderTargetView.h  Viewport.cpp  Viewport.h  WindowRenderTarget.h
KYEngine/Graphic/Resource/: Buffer.cpp  Buffer.h  ConstBufferDef.h  IResourceInterface.h  IndexBuffer.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  StateHelper.cpp  StateObject.h  StateObject.inl  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
KYEngine/Graphic/Resource/Buffer/: Buffer.cpp  Buffer.h  ConstBufferDef.h  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h
KYEngine/Graphic/Resource/Shader/: Shader.cpp  Shader.h  ShaderResourceView.cpp  ShaderResourceView.h
KYEngine/Graphic/Resource/Shader/Compile/: ShaderCodeRegenerate.cpp  ShaderCodeRegenerate.h
KYEngine/Graphic/Resource/State/: StateHelper.cpp  StateHelper.h  StateObject.cpp  StateObject.h  StateObject.inl
KYEngine/Graphic/Resource/Texture/: Texture.cpp  Texture.h  Texture.inl  TextureAssertLoader.cpp  TextureAssertLoader.h  TextureFormatHelper.cpp  TextureFormatHelper.h  TextureTypeTraits.h  TextureTypeTraits.inl
KYEngine/Graphic/Stage/: PipelineStage.cpp  PipelineStage.h
KYEngine/ImpLib/lib/Debug/assimp/: assimp-vc120-mtd.lib  assimp-vc140-mtd.lib
KYEngine/ImpLib/lib/Release/assimp/: assimp-vc120-mt.lib  assimp-vc140-mt.lib
KYEngine/ImpLib/vecmatquat/: Types.h
KYEngine/ImpLib/vecmatquat/Math/: FastSqrt.cpp  FastSqrt.h  FastTrigonometry.cpp  FastTrigonometry.h
KYEngine/ImpLib/vecmatquat/Math/Matrix/: Matrix 4x4.cpp  Matrix 4x4.h
KYEngine/ImpLib/vecmatquat/Math/Quaternion/: Quaternion.cpp  Quaternion.h
KYEngine/ImpLib/vecmatquat/Math/Vector/: Vector 2.cpp  Vector 2.h  Vector 3.cpp  Vector 3.h  Vector 4.cpp  Vector 4.h
KYEngine/Input/: Input.cpp  Input.h
KYEngine/Math/: Color.cpp  Color.h  Color.inl  MathUtils.cpp  MathUtils.h  Matrix.cpp  Matrix.h  Matrix.inl  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Rectangle.h  Vector2.h  Vector3.h  Vector4.cpp  Vector4.h  VectorUnit.h
KYEngine/Resource/Shader/: Common.inc  Lighting.inc  Object.ps  Object.vs  ScreenQuad.ps  ScreenQuad.vs  ScreenTexQuad.ps  ScreenTexQuad.vs  ShadeInput.inc
KYEngine/Scene/: Actor.cpp  Actor.h  Scene.cpp  Scene.h  SpaceNode.h
KYEngine/Scene/Model/: Mesh.cpp  Mesh.h  MeshImporter.cpp  MeshImporter.h  Model.cpp  Model.h
KYEngine/Scene/Model/Assimp/: AssimpMeshImporter.cpp  AssimpMeshImporter.h  AssimpResourceManager.cpp  AssimpResourceManager.h
KYEngine/System/: SampleTest.cpp  SampleTest.h  System.cpp  System.h
MacOSX/KYEngine/: AppDelegate.swift  GameViewController.swift  Info.plist  Shaders.metal
MacOSX/KYEngine.xcodeproj/: project.pbxproj
MacOSX/KYEngine/Base.lproj/: MainMenu.xib
